--- a/resume.tex
+++ b/resume.tex
@@ -187,54 +187,33 @@
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {Scranton University}{1998 -- 1992}
-      {BA Business Administration}{Scranton, PA}
+      {California State University Sacramento}{Graduation Date: December 2018}
+      {B.S. in Computer Science}{Sacramento, CA}
   \resumeEntryEnd
 
 %-------------------------------------------------- EXPERIENCE --------------------------------------------------
-\section{\faPieChart}{Experience}
+\section{\faPieChart}{Work Experience}
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {Dunder Mifflin}{May 2013 -- Present}
-      {Regional Manager}{Scranton, PA}
+      {iHouseWeb}{February 2019- Novemember 2019}
+      {Web Builder}{Sacramento, PA}
     \resumeItemListStart
-      \resumeItem {Maintained the highest sales average, despite the weak economy and obsolete product}
-      \resumeItem {Managed, inspired, and protected the Scranton branch from criminals and raccoons}
-      \resumeItem {Led the office to obtain immeasurable success and glory}
+      \resumeItem {Build many websites using the IDX platform that creates website inReactJS}
+      \resumeItem {Imported content to website components in HTML and CSS to complete the website}
+      \resumeItem {Customized content using inline, internal, and external CSS style}
+      \resumeItem {Handled all customization that customer requested through the ticket system}
     \resumeItemListEnd
   \resumeEntryEnd
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {Dunder Mifflin}{Mar. 2008 -- Mar. 2013}
+      {Infosys }{Novemember 2019 - Present}
       {Assistant (to the) Regional Manager}{Scranton, PA}
     \resumeItemListStart
       \resumeItem {Closed more sales with revenues totalling more profit than any other employee}
       \resumeItem {Served as self-appointed enforcer of The Rules (policies and procedures manual)}
       \resumeItem {Instituted "Schrute Bucks" reward system, immeasurably raising office morale}
-    \resumeItemListEnd
-  \resumeEntryEnd
-
-  \resumeEntryStart
-    \resumeEntryTSDL
-      {Staples}{Mar. 2008 -- Mar. 2008}
-      {Sales Associate}{Scranton, PA}
-    \resumeItemListStart
-        \resumeItem {Became the top salesman of the store within a one-month timespan}
-        \resumeItem {Made a record-high sales figure despite having an unfunny boss}
-        \resumeItem {Provided extraordinary and exceptional customer service to the masses}
-    \resumeItemListEnd
-  \resumeEntryEnd
-
-  \resumeEntryStart
-    \resumeEntryTSDL
-      {Dunder Mifflin}{Mar. 2005 -- Mar. 2008}
-      {Assistant (to the) Regional Manager}{Scranton, PA}
-    \resumeItemListStart
-      \resumeItem {Acted as Regional Manager's eyes, ears, and right hand, overseeing and reporting on employee conduct}
-      \resumeItem {Provided services to the office such as martial arts and surveillance}
-      \resumeItem {Introduced new linen paper lines into the market, often closing sight-unseen sales}
     \resumeItemListEnd
   \resumeEntryEnd
 
@@ -244,33 +223,33 @@
 
   \resumeEntryStart
     \resumeEntryTD
-      {Schrute Farms (Bed and Breakfast)}{}
+      {GISA (Geologist Information Site Assessment)}{}
     \resumeItemListStart
-      \resumeItem {A beautiful resort that provides fun activites like tablemaking and mattress making.}
+      \resumeItem {GISA Project is an Android App developed for employees of CalTrans to send site information to their database easier. This is a full stack app that took filled information that is stored inside that is forwarded to a MySQL database that is hosted by Amazon. Information that are stored are strings, bitmaps, and double. The App is created with Android Studio and the middleware of the stack is node.js server}
     \resumeItemListEnd
   \resumeEntryEnd
 
   \resumeEntryStart
     \resumeEntryTD
-      {Dwight Schrute's Gym for Muscles}{}
+      {SSCAP (Student Service Counselling Appointment Program)}{}
     \resumeItemListStart
-      \resumeItem {A built-in gym inside the Dunder Mifflin office complex that will buy your tin for 5 cents a yard.}
+      \resumeItem {SSCAP is a web app program created for counselling service of the ECS department. This program displayed the schedules of the whole ECS department counselors to one calendar. This is so students would be able to see the best fit time to come or make future arrangements. This program was created in Vue.js framework while MangoDB was handling the backend storage of the work. }
     \resumeItemListEnd
   \resumeEntryEnd
 
   \resumeEntryStart
     \resumeEntryTD
-      {Sesame Avenue Daycare Center for Infants and Toddlers}{}
+      {OOP Spaceship Game}{}
     \resumeItemListStart
-      \resumeItem {A great daycare for infants with a focus on cognitive development.}
+      \resumeItem {This game was a free moving spaceship that had three lives to destroy as many asteroids as you can for the most points. Game states such as pause and no music was implemented for user experience. The spaceship game is created to understand and use Object Oriented Concepts. The four main concepts of OOP; Abstraction, Encapsulation, Inheritance, and Polymorphism was required to pass.}
     \resumeItemListEnd
   \resumeEntryEnd
 
 %-------------------------------------------------- PROGRAMMING SKILLS --------------------------------------------------
-\section{\faGears}{Skills}
+\section{\faGears}{Technical Skills}
  \resumeEntryStart
-  \resumeEntryS{Traits } {Hardworking, Alpha Male, Jackhammer, Merciless, Insatiable}
-  \resumeEntryS{Talents } {Karate (Black Belt), Jujitsu, Werewolf Hunting, Table Making}
+  \resumeEntryS{Languages \& Databases } {HTML, CSS, JavaScript, Python, Java, MySQL, XML, C++}
+  \resumeEntryS{Frameworks \& Libraries} {React, React Native, Node.js, jQuery, Discord.js, Vue.js, Angularjs, Bootstrap, Spring Boot}
  \resumeEntryEnd
 
 \end{document}
