--- a/resume.tex
+++ b/resume.tex
@@ -43,9 +43,7 @@
 \def \githublink {https://github.com/leaagithub}
 \def \githubtext {https://github.com/leaagithub}
 
-\def \websiteicon {\faGlobe}
-\def \websitelink {https://google.com/}
-\def \websitetext {dwightschrute.com}
+
 
 \def \headertype {\doublecol} % \singlecol or \doublecol
 
@@ -67,7 +65,7 @@
 \def \phone {\phoneicon \hspace{3pt}{ \phonetext}}
 \def \email {\emailicon \hspace{3pt}\href{\emaillink}{\emailtext}}
 \def \github {\githubicon \hspace{3pt}\href{\githublink}{\githubtext}}
-\def \website {\websiteicon \hspace{3pt}\href{\websitelink}{\websitetext}}
+\def \website {}
 
 % Adjust margins
 \addtolength{\oddsidemargin}{-0.55in}
@@ -197,35 +195,34 @@
   \resumeEntryStart
     \resumeEntryTSDL
       {iHouseWeb}{February 2019- Novemember 2019}
-      {Web Builder}{Sacramento, PA}
+      {Web Builder}{Sacramento, CA}
     \resumeItemListStart
-      \resumeItem {Build many websites using the IDX platform that creates website inReactJS}
-      \resumeItem {Imported content to website components in HTML and CSS to complete the website}
-      \resumeItem {Customized content using inline, internal, and external CSS style}
-      \resumeItem {Handled all customization that customer requested through the ticket system}
+      \resumeItem {Built, Design, and Released live ready reactjs websites created in a CMS Platform}
+      \resumeItem {Basic website formatting and restructuring using CSS style while using clients content information}
+      \resumeItem {Handled all customization that customer requested and response through the ticket system with a team of 5 other web builders which is forwarded to the Developer team and Sales Team}
     \resumeItemListEnd
   \resumeEntryEnd
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {Infosys }{Novemember 2019 - Present}
-      {Assistant (to the) Regional Manager}{Scranton, PA}
+      {Infosys Limited}{Novemember 2019 - Present}
+      {Software Engineer Associate}{San Francisco, CA}
     \resumeItemListStart
-      \resumeItem {Closed more sales with revenues totalling more profit than any other employee}
-      \resumeItem {Served as self-appointed enforcer of The Rules (policies and procedures manual)}
-      \resumeItem {Instituted "Schrute Bucks" reward system, immeasurably raising office morale}
+      \resumeItem {Onboard Training Coding Bootcamp Program learning full stack using AngularJS, Spring Boot, and CRUD operations using Oracle}
+      \resumeItem {Capstone project with a team of 5 for a website store implementing 6 additional features that uses the Recommended List object}
+      \resumeItem {Created Business model designed websites and passed common QA testing with AOP Testing and Junit Testing}
     \resumeItemListEnd
   \resumeEntryEnd
 
 
 %-------------------------------------------------- PROJECTS --------------------------------------------------
-\section{\faFlask}{Projects}
+\section{\faFlask}{Projects Experience}
 
   \resumeEntryStart
     \resumeEntryTD
       {GISA (Geologist Information Site Assessment)}{}
     \resumeItemListStart
-      \resumeItem {GISA Project is an Android App developed for employees of CalTrans to send site information to their database easier. This is a full stack app that took filled information that is stored inside that is forwarded to a MySQL database that is hosted by Amazon. Information that are stored are strings, bitmaps, and double. The App is created with Android Studio and the middleware of the stack is node.js server}
+      \resumeItem {GISA Project is an Android App developed for employees of CalTrans to send site information to their database easier. The App is created with Android Studio and the middleware of the stack is node.js server. This is a full stack app took filled information that is stored inside that is forwarded to a MySQL database that is hosted by Amazon. Information that are stored are strings, bitmaps, and double.}
     \resumeItemListEnd
   \resumeEntryEnd
 
@@ -239,9 +236,9 @@
 
   \resumeEntryStart
     \resumeEntryTD
-      {OOP Spaceship Game}{}
+      {SWRB (Summoners War Response Bot)}{}
     \resumeItemListStart
-      \resumeItem {This game was a free moving spaceship that had three lives to destroy as many asteroids as you can for the most points. Game states such as pause and no music was implemented for user experience. The spaceship game is created to understand and use Object Oriented Concepts. The four main concepts of OOP; Abstraction, Encapsulation, Inheritance, and Polymorphism was required to pass.}
+      \resumeItem {This program was inspired when someone made a proxy tool that intercepted data sent out by the android game, Summoners War. I modified his tool and added a feature that would forwarded that game data object to my python flask program using API requests. Using this game data, I would automate tasks using ADB shell inputs based off the game data response.}
     \resumeItemListEnd
   \resumeEntryEnd
 
