Updated Oncore experienced, removed ihouse

--- a/resume.tex
+++ b/resume.tex
@@ -194,18 +194,18 @@
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {iHouseWeb}{February 2019- Novemember 2019}
-      {Web Builder}{Sacramento, CA}
+      {Oncore LLC}{May2020- Present}
+      {Jr Agile Developer}{Sacramento, CA}
     \resumeItemListStart
-      \resumeItem {Built, Design, and Released live ready reactjs websites created in a CMS Platform}
-      \resumeItem {Basic website formatting and restructuring using CSS style while using clients content information}
-      \resumeItem {Handled all customization that customer requested and response through the ticket system with a team of 5 other web builders which is forwarded to the Developer team and Sales Team}
+      \resumeItem {Perform as a team member on an Agile team focused on software delivery and support on CMIPS Project}
+      \resumeItem {Took part of daily stand up meetings, planning sessions, backlog grooming session, and retrospectives as a team member}
+      \resumeItem {Actively learning more about the Curam and Angular framework to apply on the CMIPS Project}
     \resumeItemListEnd
   \resumeEntryEnd
 
   \resumeEntryStart
     \resumeEntryTSDL
-      {Infosys Limited}{Novemember 2019 - Present}
+      {Infosys Limited}{Novemember 2019 - May 2020}
       {Software Engineer Associate}{San Francisco, CA}
     \resumeItemListStart
       \resumeItem {Onboard Training Coding Bootcamp Program learning full stack using AngularJS, Spring Boot, and CRUD operations using Oracle}
@@ -220,7 +220,7 @@
 
   \resumeEntryStart
     \resumeEntryTD
-      {GISA (Geologist Information Site Assessment)}{}
+      {GISA (Geologist Information Site Assessment)}{Jan 2018-Decr 2018}
     \resumeItemListStart
       \resumeItem {GISA Project is an Android App developed for employees of CalTrans to send site information to their database easier. The App is created with Android Studio and the middleware of the stack is node.js server. This is a full stack app took filled information that is stored inside that is forwarded to a MySQL database that is hosted by Amazon. Information that are stored are strings, bitmaps, and double.}
     \resumeItemListEnd
@@ -228,7 +228,7 @@
 
   \resumeEntryStart
     \resumeEntryTD
-      {SSCAP (Student Service Counselling Appointment Program)}{}
+      {SSCAP (Student Service Counselling Appointment Program)}{Jan 2017- May 2017}
     \resumeItemListStart
       \resumeItem {SSCAP is a web app program created for counselling service of the ECS department. This program displayed the schedules of the whole ECS department counselors to one calendar. This is so students would be able to see the best fit time to come or make future arrangements. This program was created in Vue.js framework while MangoDB was handling the backend storage of the work. }
     \resumeItemListEnd
@@ -236,7 +236,7 @@
 
   \resumeEntryStart
     \resumeEntryTD
-      {SWRB (Summoners War Response Bot)}{}
+      {SWRB (Summoners War Response Bot)}{Jan 2, 2020- Feb 2, 2020}
     \resumeItemListStart
       \resumeItem {This program was inspired when someone made a proxy tool that intercepted data sent out by the android game, Summoners War. I modified his tool and added a feature that would forwarded that game data object to my python flask program using API requests. Using this game data, I would automate tasks using ADB shell inputs based off the game data response.}
     \resumeItemListEnd
