Updated oncore experience

--- a/resume.tex
+++ b/resume.tex
@@ -198,7 +198,7 @@
       {Jr Agile Developer}{Sacramento, CA}
     \resumeItemListStart
       \resumeItem {Perform as a team member on an Agile team focused on software delivery and support on CMIPS Project}
-      \resumeItem {Took part of daily stand up meetings, planning sessions, backlog grooming session, and retrospectives as a team member}
+      \resumeItem {Took part of daily stand up meetings, planning sessions, backlog grooming session, and retrospectives}
       \resumeItem {Actively learning more about the Curam and Angular framework to apply on the CMIPS Project}
     \resumeItemListEnd
   \resumeEntryEnd
